# Setup Configuration File
# https://docs.python.org/3/distutils/configfile.html
# [INI](https://docs.python.org/3/install/index.html#inst-config-syntax) file format.

[metadata]
name = quantumflow
url = https://github.com/gecrooks/quantumflow/
author = Gavin Crooks
author_email = gavincrooks@gmail.com
description = "Cross compiler for gate based models of quantum computing"
long_description = file:README.md
long_description_content_type = text/markdown
license_file = LICENSE
license = Apache-2.0

classifiers=
    Development Status :: 4 - Beta
    Intended Audience :: Science/Research
    License :: OSI Approved :: Apache Software License
    Topic :: Scientific/Engineering
    Programming Language :: Python
    Natural Language :: English
    Topic :: Software Development :: Libraries
    Topic :: Software Development :: Libraries :: Python Modules
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7    
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9    
    Operating System :: OS Independent


[options]
zip_safe = True
python_requires = >= 3.7
packages = find:

install_requires =
    importlib_metadata              # required for python 3.7
    numpy
    scipy
    sympy               >= 1.6
    networkx
    decorator           < 5.0.0     # 5.0 breaks networkx dependancy 
    opt_einsum
    pillow
    matplotlib


setup_requires =
  setuptools_scm

[options.extras_require]
ext = 
    cirq            >= 0.8.0
    qiskit          >= 0.24.0
    ruamel.yaml                      # Additional requirement for pyquil
    pyquil          >= 2.28.0
    qsimcirq
    qutip
    amazon-braket-sdk    

docs =
    sphinx
    sphinxcontrib-bibtex
    guzzle-sphinx-theme
    setuptools_scm

dev =
    numpy           >= 1.20          # Needed for numpy.typehints
    cirq            >= 0.8.0
    qiskit          >= 0.24.0
    ruamel.yaml
    pyquil          >= 2.28.0
    qsimcirq            
    qutip
    amazon-braket-sdk

    sphinx
    sphinxcontrib-bibtex
    guzzle-sphinx-theme

    setuptools_scm
    twine
    setupext-janitor

    pytest >= 4.6
    pytest-cov
    flake8
    mypy
    black
    isort
    nbmake                          # for testing notebooks


# pytest configuration
[tool:pytest]
testpaths =
    quantumflow
    examples


# Configuration for test coverage
#
# https://coverage.readthedocs.io/en/latest/config.html
# > python -m pytest --cov
# Use ``# pragma: no cover`` to exclude specific lines

[coverage:paths]
source =
    quantumflow

[coverage:run]
omit =
    *_test.py

[coverage:report]
show_missing = true
exclude_lines =
    pragma: no cover
    except ImportError
    assert False
    raise NotImplementedError()
    pass


# flake8 linter configuration
[flake8]
max-line-length = 88
ignore = E203, W503


# mypy typecheck configuration
#
# https://mypy.readthedocs.io/en/stable/config_file.html

[mypy]
files: quantumflow

# Suppresses error about unresolved imports (i.e. from numpy)
ignore_missing_imports = True

# Disallows functions without type annotations
disallow_untyped_defs = True

# Disable strict optional checks (Was default prior to mypy 0.600)
strict_optional = False
