
# Setup Configuration File
# setup.cfg is the configuration file for setuptools. It tells setuptools about your package
# (such as the name and version) as well as which code files to include. Eventually much of
# this configuration may be able to move to pyproject.toml.
#
# https://packaging.python.org/tutorials/packaging-projects/
# https://docs.python.org/3/distutils/configfile.html
# [INI](https://docs.python.org/3/install/index.html#inst-config-syntax) file format.
#
# Project cut from gecrooks_python_template cookiecutter template
# https://github.com/gecrooks/gecrooks-python-template


[metadata]
# https://setuptools.readthedocs.io/en/latest/userguide/declarative_config.html
# SPDX license short-form identifier, https://spdx.org/licenses/
# https://pypi.org/classifiers/
# setuptools v53.1.0+ expects lower cased keys, e.g. "Name" must be "name".

name = quantumflow
summary = QuantumFlow 2.0.0-alpha development
long_description = file:README.md
long_description_content_type = text/markdown
keywords = python
url = https://github.com/gecrooks/quantumflow/
author = Gavin E. Crooks
author_email = gavincrooks@gmail.com
license = Apache-2.0
license_file = LICENSE
classifiers=
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    Intended Audience :: Science/Research
    Programming Language :: Python
    Natural Language :: English
    Operating System :: OS Independent    
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7    
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9

    Topic :: Scientific/Engineering
    Topic :: Software Development
    Topic :: Software Development :: Libraries
    Topic :: Software Development :: Libraries :: Python Modules
    Typing :: Typed


[options]
zip_safe = True
python_requires = >= 3.7
packages = find:

install_requires =
    importlib_metadata              ; python_version < "3.8"   # PEP508 environment marker
    typing_extensions ~= 3.10.0     ; python_version < "3.10"   # PEP508 environment marker
    numpy
    sympy
    scipy
    networkx

setup_requires =
  setuptools_scm


[options.extras_require]
dev =
    numpy >= 1.20           # v1.20 introduces typechecking for numpy
    setuptools_scm
    pytest >= 4.6
    pytest-cov
    flake8
    mypy
    black
    isort
    sphinx



# pytest configuration
[tool:pytest]
testpaths =
    quantumflow



# Configuration for test coverage
#
# https://coverage.readthedocs.io/en/latest/config.html
# > python -m pytest --cov
# Use ``# pragma: no cover`` to exclude specific lines

[coverage:paths]
source =
    quantumflow

[coverage:run]
omit =
    *_test.py

[coverage:report]
show_missing = true
exclude_lines =
    pragma: no cover
    except ImportError
    assert False
    raise NotImplementedError()
    pass



# Make isort compatible with black
[isort]
profile = black



# flake8 linter configuration
[flake8]
max-line-length = 88
ignore = E203, W503     # Conform to black's style



# mypy typecheck configuration
# https://mypy.readthedocs.io/en/stable/config_file.html
[mypy]
files = quantumflow

# Suppresses error about unresolved imports (i.e. from numpy)
ignore_missing_imports = True

# Disallows functions without type annotations
disallow_untyped_defs = True

# Disable strict optional checks (Was default prior to mypy 0.600)
strict_optional = False
