# Setup Configuration File
# https://docs.python.org/3/distutils/configfile.html
# [INI](https://docs.python.org/3/install/index.html#inst-config-syntax) file format.

[metadata]
name = quantumflow
url = https://github.com/gecrooks/quantumflow/
author = Gavin Crooks
author_email = gavincrooks@gmail.com
description = "Cross compiler for gate based models of quantum computing"
long_description = file:README.md
long_description_content_type = text/markdown
license_file = LICENSE
license = Apache-2.0

classifiers=
    Development Status :: 4 - Beta
    Intended Audience :: Science/Research
    License :: OSI Approved :: Apache Software License
    Topic :: Scientific/Engineering
    Programming Language :: Python
    Natural Language :: English
    Topic :: Software Development :: Libraries
    Topic :: Software Development :: Libraries :: Python Modules
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
      Programming Language :: Python :: 3.11     
    Operating System :: OS Independent


[options]
zip_safe = True
python_requires = >= 3.9
packages = find:

install_requires =
    importlib_metadata                  ; python_version < "3.8"   # PEP508 environment marker
    typing_extensions       >= 4.1.1
    numpy                   
    scipy                   < 1.10.0    # v1.10 breaks tests
    sympy                   >= 1.6
    networkx
    decorator               < 5.0.0     # 5.0 breaks networkx dependancy 
    opt_einsum
    pillow                  != 9.1.0    # 9.1.0 has problems on some versions of MacOS
                                        # https://github.com/python-pillow/Pillow/issues/6179
    matplotlib



setup_requires =
  setuptools_scm

[options.extras_require]
ext = 
    cirq                    >= 0.8.0
    qiskit                  >= 0.24.0
    qiskit-aer
    ruamel.yaml                         # Additional requirement for pyquil
    pyquil                  >= 2.28.0
    qsimcirq                >= 0.10.2
    qutip
    amazon-braket-sdk    

docs =
    sphinx
    sphinxcontrib-bibtex
    guzzle-sphinx-theme
    setuptools_scm

dev =
    cirq                    >= 0.8.0
    qiskit                  >= 0.24.0
    qiskit-aer
    ruamel.yaml                         # Additional requirement for pyquil
    pyquil                  >= 2.28.0
    qsimcirq                >= 0.10.2   ; python_version < "3.11"   # PEP508 environment marker
    qutip
    amazon-braket-sdk  

    sphinx
    sphinxcontrib-bibtex
    guzzle-sphinx-theme
    setuptools_scm
    twine

    setupext-janitor

    numpy                   >= 1.20     # Needed for numpy.typehints
    pytest >= 4.6
    pytest-cov
    flake8
    mypy                    >= 0.931
    black                   
    isort
    nbmake                              # for testing notebooks
    pre-commit


# pytest configuration
[tool:pytest]
testpaths =
    quantumflow
    examples


# Configuration for test coverage
#
# https://coverage.readthedocs.io/en/latest/config.html
# > python -m pytest --cov
# Use ``# pragma: no cover`` to exclude specific lines

[coverage:paths]
source =
    quantumflow

[coverage:run]
omit =
    *_test.py

[coverage:report]
show_missing = true
exclude_lines =
    pragma: no cover
    except ImportError
    assert False
    raise NotImplementedError()
    pass



# flake8 linter configuration
[flake8]
# Conform to Black's defaults
max-line-length = 88
ignore =
    # Whitespace before ':'
    E203,
    # Line break before binary operator
    W503


# mypy typecheck configuration
#
# https://mypy.readthedocs.io/en/stable/config_file.html

[mypy]
files: quantumflow

# Suppresses error about unresolved imports (i.e. from numpy)
ignore_missing_imports = True

# Disallows functions without type annotations
disallow_untyped_defs = True

# Disable strict optional checks (Was default prior to mypy 0.600)
# strict_optional = False
